# worldcup-prediction

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
deploy/systemd/: worldcup-prediction-update.service  worldcup-prediction-update.timer
scripts/: update_public.sh
tests/: test_live_results.py  test_lottery.py  test_model.py  test_pipeline.py  test_sporttery_lottery.py  test_web_assets.py
wcmodel/: __init__.py  cli.py  data.py  live_results.py  lottery.py  model.py  pipeline.py  simulate.py  sporttery_lottery.py
web/: index.html
web/assets/: app.js  styles.css
