[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wc26-forecast-web"
version = "0.1.0"
description = "Offline-first World Cup prediction website for local deployment"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
wcmodel = "wcmodel.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
